# ChangeLog for app-office/openoffice-ximian
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice-ximian/Attic/ChangeLog,v 1.108 2005/01/29 12:05:50 suka Exp $

  29 Jan 2005; Andreas Proschofsky <suka@gentoo.org>
  openoffice-ximian-1.3.8.ebuild:
  *) Fix kde path detection, closes bug #79827.
  *) Provide virtual/ooo
  *) further ebuild cleanups

  28 Jan 2005; Andreas Proschofsky <suka@gentoo.org>
  files/1.1.4/gentoo-1.3.8.patch, openoffice-ximian-1.3.8.ebuild:
  The GCC 3.4 patches also work with gcc 3.3.x, so we don't have to check for
  gcc-version before applying them. That's fine cause now we can let the
  ooo-patchset do the work, which cleans up the ebuild a bit.

  28 Jan 2005; Andreas Proschofsky <suka@gentoo.org>
  openoffice-ximian-1.3.8.ebuild:
  Use CXXFLAGS instead of CFLAGS, closes bug #79828

  28 Jan 2005; Andreas Proschofsky <suka@gentoo.org>
  files/1.1.4/gentoo-1.3.8.patch:
  Fix the -gnome -kde bug, again. Closes bug #79831

*openoffice-ximian-1.3.8 (28 Jan 2005)

  28 Jan 2005; Andreas Proschofsky <suka@gentoo.org>
  +files/1.1.4/STLport-vector.patch, +files/1.1.4/config-db-checkfix.patch,
  +files/1.1.4/gcc-instlib.patch, +files/1.1.4/gentoo-1.3.8.patch,
  +files/1.1.4/gentoo-splash.diff, +files/1.1.4/hardened-link.patch,
  +files/1.1.4/javafix.patch, +files/1.1.4/newstlportfix.patch,
  +files/1.1.4/nptl.patch, +files/1.1.4/pthreadlink-fix.patch,
  +files/1.1.4/pyunolink-fix.patch, +files/1.1.4/regcompfix.patch,
  +files/1.1.4/xooffice-wrapper-1.3, +openoffice-ximian-1.3.8.ebuild:
  New patch version release, the first one based on OOo 1.1.4. Also includes a
  patch for a new build problem introduced in 1.3.8. A list of other changes
  and improvements can be found here:
  
  http://cvs.gnome.org/viewcvs/ooo-build/NEWS?rev=1.49.4.4&only_with_tag=ooo-b
  uild-1-3&view=auto

  24 Jan 2005; Andreas Proschofsky <suka@gentoo.org>
  files/1.1.3/xooffice-wrapper-1.3: