@@ -1,6 +1,10 @@
 # ChangeLog for app-office/openoffice-ximian
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice-ximian/Attic/ChangeLog,v 1.108 2005/01/29 12:05:50 suka Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/openoffice-ximian/Attic/ChangeLog,v 1.109 2005/01/31 21:06:16 suka Exp $
+
+  31 Jan 2005; Andreas Proschofsky <suka@gentoo.org>
+  openoffice-ximian-1.3.7.ebuild, openoffice-ximian-1.3.8.ebuild:
+  Add another addpredict to work around Sandbox problems, closes bug #79084
 
   29 Jan 2005; Andreas Proschofsky <suka@gentoo.org>
   openoffice-ximian-1.3.8.ebuild:
